# wa_engage

./: ARCHITECTURE.md  README.md  pyproject.toml
app/: main.py
migrations/versions/: 1766837858_c1d2e3f4g5h6_add_report_recipient_table.py  1769300000_d3e4f5g6h7i8_add_jimmy_tables.py  1769301000_e4f5g6h7i8j9_add_preferred_gender_to_leader_state.py  1769402000_f5g6h7i8j9k0_add_answer_review_table.py  1769503000_g6h7i8j9k0l1_add_notion_page_meta_table.py  1769604000_h7i8j9k0l1m2_add_knowledge_chunk_table.py
src/api/: deps.py  jimmy_webhook.py
src/config/: __init__.py
src/handler/: __init__.py  base_handler.py  test_message_handler.py
src/jimmy/: __init__.py  brain.py  embeddings.py  handler.py  knowledge_indexer.py  knowledge_scheduler.py  notion_client.py  reminders.py  templates.py  test_brain.py
src/models/: __init__.py  answer_review.py  escalated_question.py  knowledge_chunk.py  leader_state.py  message.py  notion_page_meta.py  reminder_log.py
src/summarize_and_send_to_groups/: __init__.py
src/utils/: chat_text.py  test_chat_text.py
